--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -644,6 +644,14 @@ h1 {
   grid-column: span 12 / span 12;
 }
 
+.col-span-4 {
+  grid-column: span 4 / span 4;
+}
+
+.col-span-8 {
+  grid-column: span 8 / span 8;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -677,6 +685,10 @@ h1 {
   display: none;
 }
 
+.h-6 {
+  height: 1.5rem;
+}
+
 .w-3\/4 {
   width: 75%;
 }
@@ -700,6 +712,10 @@ h1 {
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-center {
@@ -771,6 +787,11 @@ h1 {
   padding-right: 2rem;
 }
 
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
 .py-28 {
   padding-top: 7rem;
   padding-bottom: 7rem;
@@ -784,6 +805,11 @@ h1 {
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .py-9 {
@@ -822,6 +848,18 @@ h1 {
   line-height: 1.25rem;
 }
 
+.text-\[24px\] {
+  font-size: 24px;
+}
+
+.text-\[72px\] {
+  font-size: 72px;
+}
+
+.text-\[20px\] {
+  font-size: 20px;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -857,6 +895,14 @@ h1 {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-\[\] {
+  color: ;
+}
+
+.text-\[72p\] {
+  color: 72p;
 }
 
 .opacity-0 {
@@ -914,6 +960,10 @@ h1 {
 
   .sm\:block {
     display: block;
+  }
+
+  .sm\:gap-7 {
+    gap: 1.75rem;
   }
 }
 
@@ -981,6 +1031,10 @@ h1 {
     justify-content: flex-start;
   }
 
+  .lg\:justify-between {
+    justify-content: space-between;
+  }
+
   .lg\:py-16 {
     padding-top: 4rem;
     padding-bottom: 4rem;
@@ -992,5 +1046,17 @@ h1 {
 
   .lg\:text-\[69px\] {
     font-size: 69px;
+  }
+
+  .lg\:text-\[23px\] {
+    font-size: 23px;
+  }
+
+  .lg\:text-\[44px\] {
+    font-size: 44px;
+  }
+
+  .lg\:text-\[\] {
+    color: ;
   }
 }
